--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -15,9 +15,9 @@
   <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
   <style>
     .kontakt-wrapper {
-      background-color: #eef0f2; 
+      background-color: #f5faff; 
       width: 100%;
-      padding: 4rem 0;
+      padding: 5rem;
     }
 
     .tym-wrapper {
