--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -26,7 +26,7 @@
   <meta name="twitter:image" content="{{ url_for('static', filename='img/big.logo.png', _external=True) }}" />
   <style>
     .payment-section {
-      background-color:#f5faff; 
+      background-color: #f5faff; 
       padding: clamp(0rem, 1vw, 5vw) clamp(2vw, 4vw, 8vw);
       margin-top: 0vw;
       margin-bottom: 15vw auto;
@@ -82,7 +82,7 @@
     .course-card .price {
       font-size: clamp(1.4rem, 2vw, 1.8rem);
       font-weight: 700;
-      color: #1cbe00;
+      color: #00a8e8;
       text-align: center;
       margin-top: 1.5rem;
       margin-bottom: 2rem;
@@ -348,7 +348,7 @@
         <div class="space" style="color: #fe6d73; "><p><strong>13 volných míst</strong></p></div>
         <p><strong>Období:</strong> 3. Únor – 16. Dubna</p>
         <p><strong>Rozsah:</strong> 20 lekcí (30h)</p>
-        <p><strong>Popis:</strong><br> Masakr je grind.<br> Cílem je získat v testech jistotu <br>a tak je píšem pořád dokola. <br>Každý týden žaci si napíšou kompletní cermat test, který si nasledně s lektorem v malých skupinkách opraví a vysvětlí. </p>
+        <p><strong>Popis:</strong><br>  Cílem kurzu je získat v testech jistotu a tak je píšem pořád dokola. <br>V každé lekci žaci si napíšou kompletní cermat test, který si nasledně s lektorem v malých skupinkách opraví a vysvětlí. </p>
         <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
         <div class="price">Cena: 4 000 Kč</div>
 
