nový mikuldovy barvicky a video

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -55,7 +55,7 @@
     .dou-heading-inner {
       display: flex;
       flex-wrap: wrap;
-      gap: 3em;
+      gap: 2em;
     }
     .left-col, .right-col {
       flex: 1 1 200px;
@@ -81,13 +81,13 @@
     }
 
     .label-left {
-      color: #17c3b2;
+      color: #15b5a5;
       margin-left: clamp(5rem, 15vw, 15vw);
       margin-top: clamp(1rem, 2vw, 2.5vw);
     }
 
     .label-right {
-      color: #fe6d73;
+      color: #c3282d;
       margin-right: clamp(7rem, 25vw, 25vw);
       margin-top: clamp(1rem, 2vw, 2.5vw);
     }
@@ -123,7 +123,7 @@
       transform: translateX(-50%);
       height: 8px;
       width: 79%;
-      background: linear-gradient(to right ,#ccc 5%, #17c3b2 5%,#17c3b2 59%, #fe6d73 33.3%);
+      background: linear-gradient(to right ,#ccc 5%, #15b5a5 5%,#15b5a5 59%, #c3282d 33.3%);
       border-radius: 999px;
       z-index: 2;
     }
@@ -244,7 +244,7 @@
       transform: translateX(-50%);
       height: 8px;
       width: 85%;
-      background: linear-gradient(to right ,#ccc 6%, #17c3b2 5%,#17c3b2 59%, #fe6d73 33.3%);
+      background: linear-gradient(to right ,#ccc 6%, #17c3b2 5%,#15b5a5 59%, #c3282d 33.3%);
       border-radius: 999px;
       z-index: 2;
     }
@@ -305,8 +305,8 @@
         <div class="dou-heading-inner">
           <div class="left-col">
             <p><strong>Cena kurzů:</strong></p>
-            <p>Šprtárna: 4 000
-            <br>Masakr: 4 000</p>
+            <p>Šprtárna: 4 000 kč
+            <br>Masakr: 4 000 kč</p>
             <p><strong>Kde se koná?</strong></p>
             <p>Gymnázium Jana Keplera
             <br>Parléřova 2, Praha 6</p>
@@ -322,8 +322,8 @@
             <p>Šprtárna: 10. 1. – 1. 2.
             <br>Masakr: 1. 2. – 15. 3.</p>
             <p><strong>Kdy se koná?</strong></p>
-            <p>ČJ, Čtvrtky  17:00–18:30
-            <br>M, Úterky 17:00–18:30</p>
+            <p>ČJ, Čtvrtky  17:00–19:00
+            <br>M, Úterky 17:00–19:00</p>
           </div>
         </div>
       </div>
@@ -356,20 +356,17 @@
 
   <div class="timeline-description">
     <div class="description-block">
-      <h3 style="color: #17c3b2;">Šprtárna</h3>
+      <h3 style="color: #15b5a5;">Šprtárna</h3>
       <p>
-        Ve Šprtárně nám především jde o naučení se veškeré latky a fundementální pochopení testů.<br> 
-        Celá vyuka probíhá v menších skupinkách do kterých žaky rozdělíme na zakladě rozřzovacích testu.
-        Studenti budou vyplňovat testy po cvičeních, které si se svým lektorem následně zkontrolují,
-        v případě chyby jim lektor látku vysvětlí.
+        V této části se budeme zaobírat společným vyplňováním a nasledným opravováním testů. Studenti budou testy vyplňovat po cvičeních, které si se svým lektorem ve skupinkách následně zkontrolují a v případě chyby jim lektor látku vysvětlí. Takto studenti projdou společně celým testem, což by jim po ukončení této části mělo dát dostatečné znalosti obecné látky potřebné k úspěšnému přijetí na jejich vysněnou střední školu. Tento kurz obsahuje 11 lekcí matematiky a 11 lekcí češtiny, z čehož je každá lekce o délce 120 minut
+
       </p>
     </div>
     <div class="description-block">
-      <h3 style="color: #fe6d73;">Masakr</h3>
+      <h3 style="color: #c3282d;">Masakr</h3>
       <p>
-        V Masakru se zaměřujeme hlavně na získání jistoty při testech a time managment. <br>
-        V kurzu si každý vždy individuálně napíše test a pak si ho ve skupinkách opraví a vysvětlí chyby s lektorem.
-        Součástí jsou i domací úlohy specíalní vyučovací hodiny ve kterých se soustředíme na problematickou látku jako 16. ulohy v matematice  
+         V této části si studenti na začátku vyberou, v jakých oblastech daných předmětů by se chtěli zlepšovat, a podle toho budou následně rozřazeni do skupin. Následně budou psát testy na “ostro” stejně jako u reálných přijímaček. V posltední části lekce si pak testy ve skupinkách opraví s tím, že se lektoři budou moct primárně zaměřit na vysvětlení té látky, ve které dělá daná skupinka nejvíce chyb. Tento kurz se skládá z 10 lekcí češtiny a 10 lekcí matematiky s tím, že si žáci napíšou test, který je v češtině 60 minut a v matematice 70 minut, a následně si další hodinu vysvětlují vesměs podobnou látku ve skupinách, aby si žáci dopilovali menší chybky a posunuli se tak o krok blíž k přijetí na jejich vysněnou střední školu.
+ 
       </p>
     </div>
   </div>
