--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -150,6 +150,11 @@
     .kontakt-map-grid {
       grid-template-columns: 1fr;
     }
+    .kontakt-wrapper {
+      background-color: #f5faff; 
+      width: 100%;
+      padding: 1rem;
+    }
 
     iframe {
       height: 300px;
@@ -194,6 +199,7 @@
         <div class="kontakt-item">
           <strong>📞 Telefon:</strong>
           <p>
+            +420 703 371 754<br>
             +420 123 456 789<br>
             +420 602 270 817
           </p>
