--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -56,7 +56,7 @@
       margin-bottom: 5vw;
     }
     .course-card.selected {
-      border: 3px solid #1d3557;
+      border: 3px solid #000000;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -82,7 +82,7 @@
     .course-card .price {
       font-size: clamp(1.4rem, 2vw, 1.8rem);
       font-weight: 700;
-      color: #00a8e8;
+      color: #1d3557;
       text-align: center;
       margin-top: 1.5rem;
       margin-bottom: 2rem;
@@ -100,7 +100,7 @@
     }
 
     .payment-option-toggle button {
-      background-color: #00a8e8;
+      background-color: #163e8e;
       color: white;
       padding: 0.6rem 1.2rem;
       border: none;
@@ -111,10 +111,10 @@
     }
 
     .payment-option-toggle button:hover {
-      background-color: #007ea0;
+      background-color: #163e8e;
     }
     .payment-option-toggle button.active {
-      background-color: #1d3557;
+      background-color: none;
     }
 
     .payment-form {
@@ -144,7 +144,7 @@
     }
 
     .payment-form button[type="submit"] {
-      background-color: #00a8e8;
+      background-color: #163e8e;
       color: white;
       padding: 0.8rem 1.5rem;
       border: none;
@@ -197,9 +197,9 @@
         <h3>Komplet</h3>
         <div class="space" style="color: #1d3557; "><p><strong>13 volných míst</strong></p></div>
         <p><strong>Období:</strong> 4. Listopad – 16. Duben</p>
-        <p><strong>Rozsah:</strong> 42 lekcí (63h)<br></p>
-        <p><strong>Popis:</strong><br> Komplet je spojení Šprtárny a Masakru,<br> Je to kompletní příprava. Žákum pravidelně posíláme domácí úkoly, dukladně jim vysvětlíme veškerou látku, a naučíme je správný postup při vyplňování testů<br> </p>
-        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
+        <p><strong>Rozsah:</strong> 42 lekcí (84h)<br></p>
+        <p><strong>Popis:</strong><br> Tento kurz obsahuje kompletní přípravu na přijímací zkoušky. Zde se zaměříme nejen na základy, ale také na doplňení menších mezer v učivu a psaní testů stejným způsobem, jako u ostrých přijímacích zkoušek.<br> </p>
+        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–19:00 <br> Matematika, Čtvrtky 17:00–19:00</p>
         
         <div class="price">Cena: 8 000 Kč</div>
 
@@ -270,12 +270,12 @@
 
      <!--SPRTARNA-->
       <div class="course-card">
-        <h3 style="color: #17c3b2;">Šprtárna</h3>
-        <div class="space" style="color: #17c3b2; "><p><strong>14 volných míst</strong></p></div>
+        <h3 style="color: #15b5a5;">Šprtárna</h3>
+        <div class="space" style="color: #15b5a5; "><p><strong>14 volných míst</strong></p></div>
         <p><strong>Období:</strong> 4. Listopadu – 29. Ledna</p>
-        <p><strong>Rozsah:</strong> 22 lekcí (33h)</p>
-        <p><strong>Popis:</strong><br>Ve Šprtárně, jde hlavně o naučení se veškeré látky a seznámení se s testy. Žaci jsou rozdeleni do malých skupinek (3-5 lidi).<br> S doučovatelem vyplňují cvičné testy, jakmile se narazí na chybu tak se látka skupinově vysvětlí. </p>
-        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
+        <p><strong>Rozsah:</strong> 22 lekcí (44h)</p>
+        <p><strong>Popis:</strong><br>V tomto kurzu se primárně zaměříme na skupinové vyplňování a opravování testů ve skupinkách, abychom žákům pomohli získat základy potřebné k tomu, aby se dostali na jejich vysněnou střední školu.<br><br></p>
+        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–19:00 <br> Matematika, Čtvrtky 17:00–19:00</p>
         <div class="price">Cena: 4 000 Kč</div>
 
         <div class="payment-options">
@@ -344,12 +344,12 @@
 
       <!-- KARTA: Masakr -->
       <div class="course-card">
-        <h3 style="color: #fe6d73;">Masakr</h3>
-        <div class="space" style="color: #fe6d73; "><p><strong>13 volných míst</strong></p></div>
+        <h3 style="color: #c3282d;">Masakr</h3>
+        <div class="space" style="color: #c3282d; "><p><strong>13 volných míst</strong></p></div>
         <p><strong>Období:</strong> 3. Únor – 16. Dubna</p>
-        <p><strong>Rozsah:</strong> 20 lekcí (30h)</p>
-        <p><strong>Popis:</strong><br>  Cílem kurzu je získat v testech jistotu a tak je píšem pořád dokola. <br>V každé lekci žaci si napíšou kompletní cermat test, který si nasledně s lektorem v malých skupinkách opraví a vysvětlí. </p>
-        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–18:30 <br> Matematika, Čtvrtky 17:00–18:30</p>
+        <p><strong>Rozsah:</strong> 20 lekcí (40h)</p>
+        <p><strong>Popis:</strong><br>Zde se zaměříme na dopilování menších nedostatků studentů v potřebné látce a zároveň na psaní testů stejně, jako u Cermat testů. <br><br><br> </p>
+        <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–19:00 <br> Matematika, Čtvrtky 17:00–19:00</p>
         <div class="price">Cena: 4 000 Kč</div>
 
         <div class="payment-options">
