--- a/static/styles.css
+++ b/static/styles.css
@@ -57,16 +57,9 @@ p {
   color: #666;
 }
 
-/* ===== PATIČKA ===== */
-footer {
-  text-align: center;
-  padding: clamp(1rem, 2vw, 2rem);
-  background-color: #163e8e;
-  color: white;
-}
 /* ===== HLAVIČKA ===== */
 header {
-  background-color: #163e8e;
+  background-color: #00a8e8;
   padding: clamp(0rem, 0.4vw, 3rem) clamp(3vw, 6vw, 8vw);
   color: white;
 }
@@ -115,43 +108,11 @@ header {
   white-space: nowrap;
 }
 .header-inner nav a:hover {
-  color: white;
+  color: #f7b801;
 }
 .header-inner nav a.active {
   border-bottom: 2px solid white;
   padding-bottom: 0.2rem;
-}
-
-
-/* zvetšenéí textu */
-.header-inner nav {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: clamp(0rem, 3vw, 2.5rem);
-    justify-content: flex-end;
-    flex-grow: 1;
-}
-
-.header-inner nav a {
-    color: white;
-    font-weight: 600;
-    font-size: clamp(1rem, 1.5vw, 1.5rem);
-    text-decoration: none;
-    margin-left: 0;
-    white-space: nowrap;
-    /* Přechod pro plynulou animaci */
-    transition: transform 0.2s ease;
-}
-
-.header-inner nav a:hover {
-    color: white;
-    /* Zvětší text při najetí myší */
-    transform: scale(1.1);
-}
-
-.header-inner nav a.active {
-    border-bottom: 2px solid white;
-    padding-bottom: 0.2rem;
 }
 
 /* ===== FEATURES SEKCE ===== */
@@ -163,6 +124,7 @@ header {
   margin: clamp(2rem, 4vw, 5vw) auto;
   max-width: 1000px;
 }
+
 
 /* ===== DOUBLÍKOVÁNÍ – “dou-flex” & “dou-heading” ===== */
 .dou-flex {
@@ -252,7 +214,7 @@ header {
   display: inline-block;
   margin-top : 1em;
   margin-bottom : 0.5em;
-  background-color: #711760;
+  background-color: #ff6392;
   color: white;
   padding: clamp(0.4rem, 0.7vw, 0.7rem) clamp(1rem, 1.5vw, 1.5rem);
   font-weight: 600;
@@ -261,9 +223,16 @@ header {
   transition: background-color 0.3s;
 }
 .btn-lektori:hover {
-  background-color: #711760;
+  background-color: #ff4c7d;
 }
 
+/* ===== PATIČKA ===== */
+footer {
+  text-align: center;
+  padding: clamp(1rem, 2vw, 2rem);
+  background-color: #1d3557;
+  color: white;
+}
 .bio {
   font-size: clamp(0.8rem, 1vw, 0.9rem);
   color: #666;
