--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -196,7 +196,7 @@
             </div>
         </div>
         <div class="hero-video">
-            <iframe src="https://www.youtube.com/embed/kqZ7puaB2g8?si=_bNlDCXoEnOSHhE6" title="STUDNA (doučování)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/QYhPw3vAek0?si=dSZARwQEKwbnCvrN" title="STUDNA (doučování)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
 
