--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -305,8 +305,8 @@
         <div class="dou-heading-inner">
           <div class="left-col">
             <p><strong>Cena kurzů:</strong></p>
-            <p>Šprtárna: 4 000 kč
-            <br>Masakr: 4 000 kč</p>
+            <p>Šprtárna: 4 000 Kč
+            <br>Masakr: 4 000 Kč</p>
             <p><strong>Kde se koná?</strong></p>
             <p>Gymnázium Jana Keplera
             <br>Parléřova 2, Praha 6</p>
@@ -358,21 +358,21 @@
     <div class="description-block">
       <h3 style="color: #15b5a5;">Šprtárna</h3>
       <p>
-        V této části se budeme zaobírat společným vyplňováním a nasledným opravováním testů. Studenti budou testy vyplňovat po cvičeních, které si se svým lektorem ve skupinkách následně zkontrolují a v případě chyby jim lektor látku vysvětlí. Takto studenti projdou společně celým testem, což by jim po ukončení této části mělo dát dostatečné znalosti obecné látky potřebné k úspěšnému přijetí na jejich vysněnou střední školu. Tento kurz obsahuje 11 lekcí matematiky a 11 lekcí češtiny, z čehož je každá lekce o délce 120 minut
+        V této části se budeme zaobírat společným vyplňováním a nasledným opravováním testů. Studenti budou testy vyplňovat po cvičeních, které si se svým učitelem ve skupinkách následně zkontrolují, a v případě chyby jim učitel látku vysvětlí. Takto studenti projdou společně celým testem, což by jim po ukončení této části doučování mělo dát dostatečné znalosti obecné látky potřebné k úspěšnému přijetí na jejich vysněnou střední školu. Tento kurz obsahuje 11 lekcí matematiky a 11 lekcí češtiny, z čehož je každá lekce o délce 120 minut
 
       </p>
     </div>
     <div class="description-block">
       <h3 style="color: #c3282d;">Masakr</h3>
       <p>
-         V této části si studenti na začátku vyberou, v jakých oblastech daných předmětů by se chtěli zlepšovat, a podle toho budou následně rozřazeni do skupin. Následně budou psát testy na “ostro” stejně jako u reálných přijímaček. V posltední části lekce si pak testy ve skupinkách opraví s tím, že se lektoři budou moct primárně zaměřit na vysvětlení té látky, ve které dělá daná skupinka nejvíce chyb. Tento kurz se skládá z 10 lekcí češtiny a 10 lekcí matematiky s tím, že si žáci napíšou test, který je v češtině 60 minut a v matematice 70 minut, a následně si další hodinu vysvětlují vesměs podobnou látku ve skupinách, aby si žáci dopilovali menší chybky a posunuli se tak o krok blíž k přijetí na jejich vysněnou střední školu.
+         V této části budou studenti rozřazeni do skupin podle toho, v jakých oblastech daných předmětů se budou potřebovat zlepšovat. Následně budou psát testy na „ostro“ stejně jako u reálných přijímacích zkoušek. V druhé části lekce si pak testy ve skupinkách opraví s tím, že se učitelé budou moct primárně zaměřit na vysvětlení té látky, ve které dělá daná skupinka nejvíce chyb, aby si žáci dopilovali menší chybky a posunuli se tak o krok blíž k přijetí na jejich vysněnou střední školu. Tento kurz se skládá z 10 lekcí češtiny a 10 lekcí matematiky, z čehož se každá lekce opět skládá ze 120 minut.
  
       </p>
     </div>
   </div>
 
   <footer>
-    &copy; 2025 Studenti studentům. Všechna práva vyhrazena.
+    &copy; 2025 Studenti Studentům. Všechna práva vyhrazena.
   </footer>
 </body>
 </html>
