--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -201,27 +201,27 @@
     </section>
 
     <section class="project-info" id="o-projektu">
-        <h4>Kdo jsme, a přoč doučujeme?</h4>
+            <h4>Kdo jsme a proč doučujeme?</h4>
         <p>
-            Jsme skupina studentů Gymnázia Jana Keplera, kteří úspěšně prošli přijímacími zkouškami.
-            Vlastní zkušenost nás naučila, že většina komerčních doučování je neefektivní a finančně náročná a
-            studenti se pak často musí učit doma s rodiči.
-            <br>Založili jsme proto Studnu – doučování, které je dostupné, 
-            vedené studenty co přijímačky už zvládly a skutečně připravuje na to, co u přijímaček rozhoduje.
-        </p>
-        <h4>Jak Doučujeme</h4>
+            Jsme skupina studentů Gymnázia Jana Keplera, kteří úspěšně prošli přijímacím řízením. 
+            Vlastní zkušenost nás naučila, že většina komerčních doučování je neefektivní a finančně 
+            náročná, studenti se pak proto musí často učit doma s rodiči, nebo chodit na dqlší doučování.
+            <br>Proto jsme se rozhodli založit Studnu, doučování, které je dostupné, provozované studenty, 
+            kteří přijímačky už zvládli a skutečně připravují na to, co u přijímaček rozhoduje.
+        <h4>Jak doučujeme?</h4>
         <p>
-            Doučování je rozděleno na dvě části: na Šprtárnu a Masakr.
-            Šprtárná spočívá v obecném doučování látky ve skupinkách, které rozřadíme podle počtu bodů v prvním rozřazovacím testu. V části Masakr se zaměřujeme primárně na psaní testů a doučování specifických problémů dané látky,
+            Doučování je rozděleno na dvě části: na Šprtárnu a Masakr. 
+            Šprtárna spočívá v obecném doučování látky ve skupinkách, 
+            které určíme na základě počtu získaných bodů v rozřazovacím testu. 
+            V části Masakr se zaměřujeme primárně na psaní testů a doučování specifických problémů v dané látce, 
             tato část bude probíhat opět ve skupinkách.
         </p>
-        <h4>Lektoři</h4>
+        <h4>Učitelé</h4>
         <p>
-            Propojujeme studenty se studenty – u nás doučují žáci Gymnázia Jana Keplera,
-            kteří už přijímačky zvládli s minimálně 90 body a vědí, co je čeká.
-            Všichni máme učení na přijímačky ještě čerstvě v hlavě –
-            víme, jak se systematicky učit i na co si dát pozor v testech.
-            Učení na přijímačky máme všichni v paměti a víme jak se učit.
+            Propojujeme studenty se studenty, proto u nás doučují žáci Gymnázia Jana Keplera,
+             kteří už přijímačky zvládli s minimálně 90 body a vědí, co je čeká. 
+             Všichni máme učení na přijímačky ještě čerstvě v hlavě a víme, 
+             jak se systematicky učit i na co si dát v testech pozor.
         </p>
     </section>
     <footer>
