--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -200,7 +200,7 @@
           <strong>📞 Telefon:</strong>
           <p>
             +420 703 371 754<br>
-            +420 123 456 789<br>
+            +420 776 042 825<br>
             +420 602 270 817
           </p>
         </div>
@@ -217,7 +217,7 @@
         </div>
         <div class="kontakt-item">
           <strong>📍 Adresa</strong>
-          <p>Gymnázium Kepler<br>Parléřova 2<br>Praha 6, 169 00</p>
+          <p>Gymnázium Jana Keplera<br>Parléřova 2<br>Praha 6, 169 00</p>
         </div>
       </div>
 
