--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -195,10 +195,10 @@
       <!-- KARTA: KOMPLET-->
       <div class="course-card">
         <h3>Komplet</h3>
-        <div class="space" style="color: #1d3557; "><p><strong>13 volných míst</strong></p></div>
+
         <p><strong>Období:</strong> 4. Listopad – 16. Duben</p>
         <p><strong>Rozsah:</strong> 42 lekcí (84h)<br></p>
-        <p><strong>Popis:</strong><br> Tento kurz obsahuje kompletní přípravu na přijímací zkoušky. Zde se zaměříme nejen na základy, ale také na doplňení menších mezer v učivu a psaní testů stejným způsobem, jako u ostrých přijímacích zkoušek.<br> </p>
+        <p><strong>Popis:</strong><br> Tento kurz obsahuje kompletní přípravu na přijímací zkoušky. Zde se zaměříme nejen na základy, ale také na doplnění menších mezer v učivu a psaní testů stejným způsobem, jako u ostrých přijímacích zkoušek.<br> </p>
         <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–19:00 <br> Matematika, Čtvrtky 17:00–19:00</p>
         
         <div class="price">Cena: 8 000 Kč</div>
@@ -225,7 +225,7 @@
             <label for="parent_email">E-mail rodiče:</label>
             <input type="email" id="parent_email" name="parent_email" required>          
             
-            <label for="cislo_uctu">Vaše číslo učtu:</label>
+            <label for="cislo_uctu">Vaše číslo učtu :</label>
             <input type="number" id="cislo_uctu" name="cislo_uctu" required>    
             
             <label for="misto_bydliste">Celé místo bydliště:</label>
@@ -271,10 +271,10 @@
      <!--SPRTARNA-->
       <div class="course-card">
         <h3 style="color: #15b5a5;">Šprtárna</h3>
-        <div class="space" style="color: #15b5a5; "><p><strong>14 volných míst</strong></p></div>
+
         <p><strong>Období:</strong> 4. Listopadu – 29. Ledna</p>
         <p><strong>Rozsah:</strong> 22 lekcí (44h)</p>
-        <p><strong>Popis:</strong><br>V tomto kurzu se primárně zaměříme na skupinové vyplňování a opravování testů ve skupinkách, abychom žákům pomohli získat základy potřebné k tomu, aby se dostali na jejich vysněnou střední školu.<br><br></p>
+        <p><strong>Popis:</strong><br>V tomto kurzu se primárně zaměříme na vyplňování a opravování testů ve skupinkách, abychom žákům pomohli získat základy potřebné k tomu, aby se dostali na jejich vysněnou střední školu.<br><br></p>
         <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–19:00 <br> Matematika, Čtvrtky 17:00–19:00</p>
         <div class="price">Cena: 4 000 Kč</div>
 
@@ -345,10 +345,10 @@
       <!-- KARTA: Masakr -->
       <div class="course-card">
         <h3 style="color: #c3282d;">Masakr</h3>
-        <div class="space" style="color: #c3282d; "><p><strong>13 volných míst</strong></p></div>
+
         <p><strong>Období:</strong> 3. Únor – 16. Dubna</p>
         <p><strong>Rozsah:</strong> 20 lekcí (40h)</p>
-        <p><strong>Popis:</strong><br>Zde se zaměříme na dopilování menších nedostatků studentů v potřebné látce a zároveň na psaní testů stejně, jako u Cermat testů. <br><br><br> </p>
+        <p><strong>Popis:</strong><br>Zde se zaměříme na dopilování menších nedostatků studentů v potřebné látce a zároveň na psaní testů stejným stylem jako u ostrých přijimacích zkoušek. <br><br><br> </p>
         <p><strong>Čas:</strong><br>Čeština, Úterky 17:00–19:00 <br> Matematika, Čtvrtky 17:00–19:00</p>
         <div class="price">Cena: 4 000 Kč</div>
 
